# cbls

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  cbls_context_for_claude_code.md  minlp-heuristics-research.md  perf-pharma-glsp.md  plan.md  pyproject.toml
.github/workflows/: build-test.yml
benchmarks/bunker-eca/: FIDELITY.md  README.md  bunker_eca.cpp  bunker_eca_model.h  bunker_speed_hook.h  data.h  reference_solve.py  verify_bunker_eca.h
benchmarks/chped/: chped_model.h  data.h  data.py  reference_solve.py
benchmarks/instances/bunker-eca/: comparison.csv  data.py  large-15s-60c.jsonl  medium-7s-30c.jsonl  small-3s-10c.jsonl  xlarge-30s-120c.jsonl
benchmarks/instances/miplib-fj/: .gitignore  README.md  comparison.csv  download.py
benchmarks/instances/nuclear-outage/: comparison.csv  data.py  download.sh  gen_jsonl.py  medium.jsonl  mini.jsonl  parse_roadef.py  small.jsonl
benchmarks/instances/pharma-glsp/: all_instances.jsonl  class_a.jsonl  class_b.jsonl  class_c.jsonl  class_d.jsonl  class_e.jsonl  comparison.csv  data.py  gen_jsonl.py
benchmarks/instances/uc-chped/: comparison.csv  data.py  gen_jsonl.py  ucp100-168p.jsonl  ucp100-48p.jsonl  ucp100.jsonl  ucp13.jsonl  ucp200-168p.jsonl  ucp200-48p.jsonl  ucp200.jsonl  ucp40.jsonl
benchmarks/miplib-fj/: miplib_fj.cpp
benchmarks/nuclear-outage/: FIDELITY.md  README.md  check_solution.sh  data.h  dispatch.h  nuclear_hook.h  nuclear_model.h  nuclear_outage.cpp  reference_solve.py  roadef_dispatch.h  roadef_hook.h  write_solution.h
benchmarks/pharma-glsp/: FIDELITY.md  README.md  data.h  glsp_hook.h  glsp_model.h  pharma_glsp.cpp  reference_solve.py  verify_glsp.h
benchmarks/uc-chped/: FIDELITY.md  data.h  greedy_init.h  uc_chped.cpp  uc_model.h  verify_uc_chped.h
cbls/: __init__.py  dag.py  inner_solver.py  lns.py  model.py  moves.py  pool.py  search.py  violation.py
cbls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cmake/: cblsConfig.cmake.in
docs/: architecture.md
docs/benchmarks/uc-chped/: README.md
examples/: chped.cpp  nqueens.cbls  simple.cbls  simple.cpp
include/cbls/: cbls.h  dag.h  dag_ops.h  expr.h  formatter.h  inner_solver.h  io.h  io_mps.h  lns.h  model.h  moves.h  pool.h  rng.h  search.h  verify.h  violation.h
python/: CMakeLists.txt  bindings.cpp  pyproject.toml
python/cbls/: __init__.py
src/: cli.cpp  dag.cpp  dag_ops.cpp  expr.cpp  formatter.cpp  inner_solver.cpp  io.cpp  lns.cpp  model.cpp  moves.cpp  pool.cpp  search.cpp  verify.cpp  violation.cpp
src/io/: mps_reader.cpp  mps_to_model.cpp  solu_reader.cpp
tests/: CMakeLists.txt  test_bunker_eca.cpp  test_callback.cpp  test_chped.cpp  test_chped.py  test_dag.cpp  test_dag.py  test_expr.cpp  test_helpers.h  test_inner_solver.cpp  test_io.cpp  test_miplib_fj.cpp  test_moves.cpp  test_moves.py  test_nuclear_outage.cpp  test_pharma_glsp.cpp  test_search.cpp  test_search.py  test_uc_chped.cpp
tests/python/: conftest.py  test_dag.py  test_expr.py  test_moves.py  test_search.py
