[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbls"
version = "0.1.0"
description = "Constraint-Based Local Search engine with Hexaly-style modeling API"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
lp = ["highspy>=1.5"]
nlp = ["scipy>=1.10"]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
