[build-system]
requires = ["scikit-build-core>=0.5", "nanobind>=1.8"]
build-backend = "scikit_build_core.build"

[project]
name = "cbls"
version = "0.1.0"
description = "Constraint-Based Local Search engine (C++ core with Python bindings)"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
